project(keylogger)
cmake_minimum_required(VERSION 3.8)
set(CMAKE_CXX_STANDARD 20)
if (UNIX)
    add_definitions("-Wall -Wextra -Werror -Wshadow -Wnon-virtual-dtor -Wuninitialized -Wunreachable-code")
endif (UNIX)
file(GLOB_RECURSE KEYLOGGER_SOURCES ${PROJECT_SOURCE_DIR}/Sources/*.cpp ${PROJECT_SOURCE_DIR}/Sources/*.hpp)
add_executable(keylogger ${KEYLOGGER_SOURCES})
target_include_directories(keylogger PUBLIC ${CMAKE_INCLUDE_PATH} ${PROJECT_SOURCE_DIR}/Sources)
